--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -707,8 +707,6 @@
     <string name="info_purge_blns_item_name">Cancellare lo stato del nodo di %1$s “%2$s”\?</string>
     <string name="error_updates_aborted">Aggiornamenti interrotti</string>
     <string name="lbl_country">Paese</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Libreria assegnata alla vostra lista dei desideri</string>
-    <string name="lbl_strip_info_mapped_bookshelf_owned_books">Libreria assegnato ai propri libri</string>
     <string name="pt_search_show_shopping_options">Mostra i menu dello shopping</string>
     <string name="lbl_standardize">Standardizzare</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
@@ -755,4 +753,5 @@
     <string name="ps_sort_author_name_given_first">Ordinamento in base ai nomi,\nes. «Dante Alighieri»</string>
     <string name="ps_sort_author_name_family_first">Ordinamento in base al nome della famiglia,\nes. «Alighieri, Dante»</string>
     <string name="a_space_b">%1$s %2$s</string>
+    <string name="lbl_assign_bookshelves">Assegnare gli scaffali</string>
 </resources>
