--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -706,8 +706,6 @@
     <string name="pt_search_show_shopping_options">Toon shopping menu’s</string>
     <string name="lbl_standardize">Standaardiseren</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">„Verlanglijst” boekenplank</string>
-    <string name="lbl_strip_info_mapped_bookshelf_owned_books">„In bezit” boekenplank</string>
     <string name="lbl_titles">Titels</string>
     <string name="lbl_original_title">Oorspronkelijke titel</string>
     <string name="lbl_original_title_long">Oorspronkelijke titel indien dit boek een vertaling is</string>
@@ -750,4 +748,5 @@
     <string name="ps_sort_author_name_given_first">Sorteer eerst op de voornamen,\nbvb. „Willy Vandersteen”</string>
     <string name="ps_sort_author_name_family_first">Sorteer eerst op de achternaam,\nbvb. „Vandersteen, Willy”</string>
     <string name="a_space_b">%1$s %2$s</string>
+    <string name="lbl_assign_bookshelves">Boekenplanken toewijzen</string>
 </resources>
