--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -717,8 +717,6 @@
     <string name="info_purge_blns_item_name">Wyczyścić stan węzła %1$s „%2$s”\?</string>
     <string name="error_updates_aborted">Aktualizacje przerwane</string>
     <string name="lbl_country">Kraj</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Półka przypisana do listy życzeń</string>
-    <string name="lbl_strip_info_mapped_bookshelf_owned_books">Półka przypisana do posiadanych książek</string>
     <string name="pt_search_show_shopping_options">Pokaż menu zakupów</string>
     <string name="lbl_standardize">Ujednolicić</string>
     <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
@@ -772,4 +770,5 @@
     <string name="ps_sort_author_name_given_first">Sortuj według imion w pierwszej kolejności,\nnp. „Stanisław Lem”</string>
     <string name="ps_sort_author_name_family_first">Sortuj według nazwiska w pierwszej kolejności,\nnp. „Lem, Stanisław”</string>
     <string name="a_space_b">%1$s %2$s</string>
+    <string name="lbl_assign_bookshelves">Przypisywanie półek na książki</string>
 </resources>
