--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -714,8 +714,6 @@
     <string name="info_purge_blns_item_name">Очистить состояние узла %1$s «%2$s»\?</string>
     <string name="error_updates_aborted">Обновления прерваны</string>
     <string name="lbl_country">Страна</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">Книжная полка, назначенная на ваш список желаний</string>
-    <string name="lbl_strip_info_mapped_bookshelf_owned_books">Книжная полка, закрепленная за вашими собственными книгами</string>
     <string name="pt_search_show_shopping_options">Показать меню покупок</string>
     <string name="lbl_standardize">стандартизировать</string>
     <string name="lbl_author_pseudonym_of_X">пс. %1$s</string>
@@ -769,4 +767,5 @@
     <string name="ps_sort_author_name_given_first">Отсортировать по фамилиям,\nнапример «Фёдор Достоевский»</string>
     <string name="ps_sort_author_name_family_first">Сортировка по фамилии в первую очередь,\nнапример «Достоевский, Фёдор»</string>
     <string name="a_space_b">%1$s %2$s</string>
+    <string name="lbl_assign_bookshelves">Назначение книжных полок</string>
 </resources>
