--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes “…”  - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d kitap</item>
@@ -701,8 +704,6 @@
     <string name="info_purge_blns_item_name">%1$s “%2$s” düğüm durumu temizlensin mi\?</string>
     <string name="error_updates_aborted">Güncellemeler iptal edildi</string>
     <string name="lbl_country">Ülke</string>
-    <string name="lbl_strip_info_mapped_bookshelf_wishlist">İstek listenize atanan kitaplık</string>
-    <string name="lbl_strip_info_mapped_bookshelf_owned_books">Kendi kitaplarınıza atanmış kitaplık</string>
     <string name="pt_search_show_shopping_options">Alışveriş menülerini göster</string>
     <string name="lbl_standardize">Standardize et</string>
     <string name="lbl_author_pseudonym_of_X">ta. %1$s</string>
@@ -756,4 +757,5 @@
     <string name="ps_sort_author_name_given_first">Önce verilen isimlere göre sıralayın,\nÖrneğin “Aziz Nesin”</string>
     <string name="ps_sort_author_name_family_first">Önce soyadına göre sıralayın,\nÖrneğin “Nesin, Aziz”</string>
     <string name="a_space_b">%1$s %2$s</string>
+    <string name="lbl_assign_bookshelves">Kitap raflarını atayın</string>
 </resources>
