--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -535,6 +535,9 @@
     <string name="pt_bob_books_under_multiple_authors">Bücher mit mehreren Autoren</string>
     <string name="pt_bob_books_under_multiple_publisher">Bücher mit mehreren Verlagen anzeigen</string>
     <string name="pt_bob_books_under_multiple_series">Bücher in mehreren Serien</string>
+    <string name="pt_bob_cover_long_click">Öffnen Sie das Kontextmenü des Buches.</string>
+    <string name="pe_bob_cover_long_click_ignore">Mit einer Schaltfläche.</string>
+    <string name="pe_bob_cover_long_click_popupmenu">Mit einem langen Klick auf das Titelbild.</string>
     <string name="pt_bob_cover_scale">Buchumschläge Größe in listen</string>
     <string name="pt_bob_cover_show">Buchumschläge anzeigen</string>
     <string name="pt_bob_font_size">Schriftgröße</string>
