--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -554,6 +554,9 @@
     <string name="pt_bob_books_under_multiple_authors">Książki z wieloma autorami</string>
     <string name="pt_bob_books_under_multiple_publisher">Pokaż książki wielu wydawcom</string>
     <string name="pt_bob_books_under_multiple_series">Książki w wielu seriach</string>
+    <string name="pt_bob_cover_long_click">Otwórz menu kontekstowe książki.</string>
+    <string name="pe_bob_cover_long_click_ignore">Za pomocą przycisku.</string>
+    <string name="pe_bob_cover_long_click_popupmenu">Długim kliknięciem obrazu okładki.</string>
     <string name="pt_bob_cover_scale">Rozmiar obrazu na listach</string>
     <string name="pt_bob_cover_show">Pokaż miniaturki</string>
     <string name="pt_bob_font_size">Rozmiar czcionki</string>
