--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes “…”  - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -74,6 +77,7 @@
     <string name="action_report">Báo cáo</string>
     <string name="lbl_library">Thư viện</string>
     <string name="lbl_system_default">(Ứng dụng mặc định của hệ thống)</string>
+    <string name="lbl_keywords">Từ khóa</string>
     <string name="lbl_about">Giới thiệu</string>
     <string name="action_add">Thêm</string>
     <string name="pc_advanced_options">Nâng cao</string>
@@ -108,6 +112,13 @@
     <string name="lbl_search_filtered_by_x">Lọc theo: %1$s</string>
     <string name="pe_list">Danh sách</string>
     <string name="pe_grid">Lưới</string>
+    <string name="pt_bob_cover_show">Hiển thị bìa</string>
+    <string name="pt_bob_cover_click">Nhấn vào ảnh bìa.</string>
+    <string name="pe_bob_cover_click_zoom">Sẽ phóng to ảnh bìa.</string>
+    <string name="pe_bob_cover_click_details">Sẽ mở trang chi tiết cuốn sách.</string>
+    <string name="pt_bob_cover_long_click">Mở menu ngữ cảnh của cuốn sách.</string>
+    <string name="pe_bob_cover_long_click_ignore">Với một nút.</string>
+    <string name="pe_bob_cover_long_click_popupmenu">Với một cú nhấp chuột dài vào ảnh bìa.</string>
     <string name="pt_bob_font_size">Cỡ chữ</string>
     <string name="X_lbl_general">Chung</string>
     <string name="X_action_go">Đến</string>
@@ -130,11 +141,13 @@
     <string name="X_action_move">Chuyển</string>
     <string name="pc_bob_list">Danh sách</string>
     <string name="pt_bob_groups">Các nhóm</string>
+    <string name="pv_bob_header_nr_of_books">Số lượng sách</string>
     <string name="pv_bob_header_filters">Bộ lọc</string>
     <string name="lbl_filters">Bộ lọc</string>
     <string name="lbl_name">Tên</string>
     <string name="X_action_next">Tiếp theo</string>
     <string name="no">Không</string>
+    <string name="enabled">Đã bật</string>
     <string name="disabled">Vô hiệu hóa</string>
     <string name="none">Không</string>
     <string name="lbl_tab_notes">Ghi chú</string>
@@ -262,6 +275,7 @@
     <string name="option_sort_and_style_ellipsis">Sắp xếp &amp; Phong cách…</string>
     <string name="option_info_lbl_archive_type_backup">Sao lưu / Khôi phục kho lưu trữ đầy đủ</string>
     <string name="option_storage_select">Dùng “%1$s”</string>
+    <string name="lbl_add_filter">Thêm bộ lọc</string>
     <string name="X_option_bob_filter_anthology_no">Tất cả ngoại trừ tuyển tập</string>
     <string name="lbl_export_books_option_all">Tất cả sách</string>
     <string name="info_export_books_option_since_last_full_backup">Sách được thêm hoặc cập nhật kể từ lần sao lưu đầy đủ cuối cùng.</string>
