--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -293,6 +293,9 @@
     <string name="book_color_black_and_white">黑白本</string>
     <string name="style_builtin_author_series">作者，系列</string>
     <string name="action_undo">撤消</string>
+    <string name="pt_bob_cover_long_click">打开图书的上下文菜单。</string>
+    <string name="pe_bob_cover_long_click_ignore">用按钮</string>
+    <string name="pe_bob_cover_long_click_popupmenu">长按封面图片</string>
     <string name="pt_bob_font_size">字体大小</string>
     <string name="pt_ui_language">语言</string>
     <string name="unknown">未知</string>
