--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -540,8 +540,8 @@
     <string name="pt_bob_books_under_multiple_series">Libri in serie multiple</string>
     <string name="pt_bob_cover_long_click">Aprire il menu contestuale del libro.</string>
     <string name="pe_bob_cover_long_click_ignore">Con un pulsante.</string>
-    <string name="pe_bob_cover_long_click_popupmenu">Con un clic prolungato sull\'immagine di copertina.</string>
-    <string name="pt_bob_cover_scale">Dimensione miniature in elenchi</string>
+    <string name="pe_bob_cover_long_click_popupmenu">Con un clic prolungato sull’immagine di copertina.</string>
+    <string name="pt_bob_cover_scale">Dimensioni dell’immagine di copertina</string>
     <string name="pt_bob_cover_show">Mostra miniature</string>
     <string name="pt_bob_font_size">Dimensioni carattere</string>
     <string name="pt_bob_header">Riassunto dettagli nel titolo</string>
