--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -429,7 +429,7 @@
     <string name="pt_bob_cover_long_click">Abrir o menu de contexto do livro.</string>
     <string name="pe_bob_cover_long_click_ignore">Com um botão.</string>
     <string name="pe_bob_cover_long_click_popupmenu">Com um clique longo na imagem da capa.</string>
-    <string name="pt_bob_cover_scale">Tamanho da capa em listas</string>
+    <string name="pt_bob_cover_scale">Tamanho da imagem de capa</string>
     <string name="error_import_csv_column_count_mismatch">Incompatibilidade de contagem de colunas na linha %1$d</string>
     <string name="info_calibre_content_server_extension">A extensão do servidor de conteúdo do Calibre não está instalada. As bibliotecas virtuais não estarão disponíveis.</string>
     <string name="tip_booklist_style_properties">Utilize este ecrã para definir as características de um estilo específico. Pode alterar o nome, editar os agrupamentos para alterar a hierarquia e ajustar uma variedade de outras preferências para criar um estilo que considere útil.</string>
